compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_constant_with_labelled_constructor.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\npub const wibble = Labelled\n\npub type Labelled {\n  Labelled(Int, label: String)\n}\n"
---
pub const wibble = Labelled
▔▔▔▔▔▔▔▔▔▔▔↑▔▔▔▔           

pub type Labelled {
  Labelled(Int, label: String)
}


----- Hover content -----
Scalar(
    String(
        "```gleam\nfn(Int, label: String) -> Labelled\n```\n",
    ),
)
