compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_constructor_with_labelled_arguments.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\npub fn main() {\n    Labelled\n}\n\npub type Labelled {\n  Labelled(Int, label: String)\n}\n"
---
pub fn main() {
    Labelled
    ▔▔↑▔▔▔▔▔
}

pub type Labelled {
  Labelled(Int, label: String)
}


----- Hover content -----
Scalar(
    String(
        "```gleam\nfn(Int, label: String) -> Labelled\n```\n",
    ),
)
