compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_contextual_type.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport wibble/wobble\nconst value = wobble.Wobble\n"
---
import wibble/wobble
const value = wobble.Wobble
▔▔▔▔▔▔↑▔▔▔▔                


----- Hover content -----
Scalar(
    String(
        "```gleam\nconst value: wobble.Wibble = wobble.Wobble\n```\n",
    ),
)
