compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_contextual_type_annotation.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport wibble/wobble\n\nfn make_wibble() -> wobble.Wibble { wobble.Wibble }\n"
---
import wibble/wobble

fn make_wibble() -> wobble.Wibble { wobble.Wibble }
                    ▔↑▔▔▔▔▔▔▔▔▔▔▔                  


----- Hover content -----
Scalar(
    String(
        "```gleam\nwobble.Wibble\n```\n",
    ),
)
