compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_contextual_type_annotation_prelude.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nfn add_one(a: Int) -> Int {\n  a + 1\n}\n"
---
fn add_one(a: Int) -> Int {
                      ↑▔▔  
  a + 1
}


----- Hover content -----
Scalar(
    String(
        "```gleam\ngleam.Int\n```\n",
    ),
)
